Klient side. La inn noe i pox.xml og application.properties. Gjorde om fra JS til JQuery (bittelitt).

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -92,7 +92,7 @@
     <!-- Vis billetter som ble gjennomført etter kjøpknappen -->
     <div class="row">
         <h2 class="my-3"> Alle billetter </h2>
-        <p id="VisBilletter"></p>
+        <div id="VisBilletter"></div>
 
         <!-- Sletteknappen for å slette alle billetter som ble bestilt -->
         <div>
