Resten. Controller, Repository, SQL osv. Får feilmelding om at Port 8080 er allerede i bruk. Har testet samme koder på annen pc, og de fungerer fint.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Fremmed kino </title>
     <script src="index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -85,7 +86,7 @@
         <!-- Kjøpeknappen for kjøp av kinobilletter -->
 
         <div>
-            <button class="btn btn-primary my-3" type="button" id="kjopKnapp" onclick="kjopBillett()"> Kjøp billett </button>
+            <button class="btn btn-primary my-3" type="button" id="kjopKnapp" onclick="kjopBillett()"> Kjop billett </button>
         </div>
     </form>
 
