--- a/src/main/resources/static/endreBestilling.html
+++ b/src/main/resources/static/endreBestilling.html
@@ -1,97 +1,96 @@
 <!DOCTYPE html>
-<html lang="no">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> Fremmed kino </title>
-  <script src="endreBestilling.js"></script>
+  <title> Endre bestilling </title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="endreBestilling.js"></script>
 </head>
 
 <body>
 
-<div class="container p-3 my-3 border">
+  <div class="container p-3 my-3 border">
 
-  <h1> Endre bestillingen </h1><br>
+    <!-- OVERSKRIFT -->
+    <h1> Endre bestilling </h1>
+    <br>
 
-  <form>
-    <input type="hidden" id="id"/>
+    <!-- VELG HVILKEN FILM -->
+    <form>
+      <input type="hidden" id="id"/> <!-- Skjul id -->
+
+      <div class="row">
+        <div class="col">
+          <label for="film-valg">Velg film: </label>
+          <select class="form-select" id="film-valg" onchange="leggTilFilm(this.value)">
+            <option value="">Velg film her</option>
+            <option>Avatar</option>
+            <option>Avengers</option>
+            <option>Blade Runner</option>
+            <option>Die Hard</option>
+            <option>Gladiator</option>
+            <option>Parasite</option>
+            <option>Ringenes Herre: Ringens brorskap</option>
+            <option>Spider-Man 3</option>
+            <option>Star Wars</option>
+            <option>The Matrix</option>
+            <option>Titanic </option>
+          </select>
+          <span class="text-danger" id="film-feilmelding"></span>
+        </div>
+        <div class="col">
+          <!-- VELG ANTALL BILLETTER -->
+          <label for="billettInput">Antall: </label>
+          <select class="form-select" id="billettInput" onchange="leggTilBillett(this.value)">
+            <option value="">Velg antall her</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+          </select>
+          <span class="text-danger" id="billett-feilmelding"></span>
+        </div>
+      </div>
+    </form>
+    <br>
+    <!-- PERSONINFORMASJON -->
     <div class="row">
-
-      <!-- Filmvalg med 7 ulike filmer -->
-
-      <div class="col">
-        <label for="inp_filmvalg"> Velg film: </label>
-        <select class="form-select" id="inp_filmvalg" onchange="leggTilFilm(this.value)">
-          <option value=""> Velg film her </option>
-          <option> Krigseileren ( 2t 30 min ) </option>
-          <option> Parasite ( 2 t 12 min ) </option>
-          <option> Little Forest: Winter/Spring ( 2t ) </option>
-          <option> Only Yesterday ( 1t 58 min ) </option>
-          <option> The Nun ( 1t 36 min ) </option>
-          <option> The Truman Show ( 1t 43 min ) </option>
-          <option> One Piece Film: Red ( 1t 55 min ) </option>
-        </select>
-        <span class="text-danger" id="feilmelding-filmvalg"></span>
-      </div>
-
-      <!-- Antall billetter til bestilling -->
-
-      <div class="col">
-        <label for="inp_antall"> Antall </label>
-        <select class="form-select" id="inp_antall" onchange="leggTilBillett(this.value)">
-          <option value=""> Antall billetter </option>
-          <option> 1 </option>
-          <option> 2 </option>
-          <option> 3 </option>
-          <option> 4 </option>
-          <option> 5 </option>
-          <option> 6 </option>
-        </select>
-        <span class="text-danger" id="feilmelding-antall"></span>
-      </div>
+      <form>
+        <div class="form-group">
+          <label for="fornavnInput">Fornavn</label>
+          <input class="form-control" type="text" id="fornavnInput" onchange="leggTilFornavn(this.value)">
+          <span class="text-danger" id="fornavn-feilmelding"></span>
+        </div>
+        <div class="form-group">
+          <label for="etternavnInput">Etternavn</label>
+          <input class="form-control" type="text" id="etternavnInput" onchange="leggTilEtternavn(this.value)">
+          <span class="text-danger" id="etternavn-feilmelding"></span>
+        </div>
+        <div class="form-group">
+          <label for="telefonnrInput">Telefonnr</label>
+          <input class="form-control" type="text" id="telefonnrInput" onchange="leggTilTelefonnr(this.value)">
+          <span class="text-danger" id="telefonnr-feilmelding"></span>
+        </div>
+        <div class="form-group">
+          <label for="epostInput">Epost</label>
+          <input class="form-control" type="text" id="epostInput" onchange="leggTilEpost(this.value)">
+          <span class="text-danger" id="epost-feilmelding"></span>
+        </div>
+        <!-- Endre knapp -->
+        <div>
+          <br>
+          <input type="button" value="Endre" class="btn btn-primary" onclick="endreBestilling()">
+        </div>
+      </form>
     </div>
-
-    <!-- Kontakt info -->
-
-    <div class="row">
-
-      <div class="form-group">
-        <label for="inp_fornavn"> Fornavn: </label>
-        <input class="form-control" type="text" id="inp_fornavn" onchange="leggTilFornavn(this.value)">
-        <span class="text-danger" id="feilmelding-fornavn"></span>
-      </div>
-
-      <div class="form-group">
-        <label for="inp_etternavn"> Etternavn: </label>
-        <input class="form-control" type="text" id="inp_etternavn" onchange="leggTilEtternavn(this.value)">
-        <span class="text-danger" id="feilmelding-etternavn"></span>
-      </div>
-
-      <div class="form-group">
-        <label for="inp_telefonnr"> Telefonnr: </label>
-        <input class="form-control" type="text" id="inp_telefonnr" onchange="leggTilTelefonnr(this.value)">
-        <span class="text-danger" id="feilmelding-telefonnr"></span>
-      </div>
-
-      <div class="form-group">
-        <label for="inp_epost"> E-post: </label>
-        <input class="form-control" type="text" id="inp_epost" onchange="leggTilEpost(this.value)">
-        <span class="text-danger" id="feilmelding-epost"></span>
-      </div>
-
-    </div>
-
-    <!-- Kjøpeknappen for kjøp av kinobilletter -->
-
-    <div>
-      <br><input type="button" class="btn btn-primary" value="Endre" onclick="endreBestilling()"> Endre bestillingen </input>
-    </div>
-  </form>
-
-</div>
+  </div>
 
 </body>
 </html>
