--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,106 +1,97 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Fremmed kino </title>
-    <script src="index.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Hjemmeside</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="index.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-
-<div class="container p-3 my-3 border">
-
-    <h1> Bestilling av kinobilletter </h1><br>
-
+  <div class="container p-3 my-3 border">
+    <!-- OVERSKRIFT -->
+    <h1>Bestilling av kinobilletter</h1>
+    <br>
+    <!-- VELG HVILKEN FILM -->
     <form>
-        <div class="row">
-
-            <!-- Filmvalg med 7 ulike filmer -->
-
-            <div class="col">
-                <label for="inp_filmvalg"> Velg film: </label>
-                <select class="form-select" id="inp_filmvalg" onchange="leggTilFilm(this.value)">
-                    <option value=""> Velg film her </option>
-                    <option> Krigseileren ( 2t 30 min ) </option>
-                    <option> Parasite ( 2 t 12 min ) </option>
-                    <option> Little Forest: Winter/Spring ( 2t ) </option>
-                    <option> Only Yesterday ( 1t 58 min ) </option>
-                    <option> The Nun ( 1t 36 min ) </option>
-                    <option> The Truman Show ( 1t 43 min ) </option>
-                    <option> One Piece Film: Red ( 1t 55 min ) </option>
-                </select>
-                <span class="text-danger" id="feilmelding-filmvalg"></span>
-            </div>
-
-            <!-- Antall billetter til bestilling -->
-
-            <div class="col">
-                <label for="inp_antall"> Antall </label>
-                <select class="form-select" id="inp_antall" onchange="leggTilBillett(this.value)">
-                    <option value=""> Antall billetter </option>
-                    <option> 1 </option>
-                    <option> 2 </option>
-                    <option> 3 </option>
-                    <option> 4 </option>
-                    <option> 5 </option>
-                    <option> 6 </option>
-                </select>
-                <span class="text-danger" id="feilmelding-antall"></span>
-            </div>
+      <div class="row">
+        <div class="col">
+          <label for="film-valg">Velg film: </label>
+          <select class="form-select" id="film-valg" onchange="leggTilFilm(this.value)">
+            <option value="">Velg film her</option>
+            <option>Avatar</option>
+            <option>Blade Runner</option>
+            <option>Die Hard</option>
+            <option>Gladiator</option>
+            <option>Parasite</option>
+            <option>Ringenes Herre</option>
+            <option>Spider-Man 3</option>
+            <option>Star Wars</option>
+            <option>The Matrix</option>
+            <option>Titanic</option>
+          </select>
+          <span class="text-danger" id="film-feilmelding"></span>
         </div>
-
-        <!-- Kontakt info -->
-
-        <div class="row">
-
-            <div class="form-group">
-                <label for="inp_fornavn"> Fornavn: </label>
-                <input class="form-control" type="text" id="inp_fornavn" onchange="leggTilFornavn(this.value)">
-                <span class="text-danger" id="feilmelding-fornavn"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="inp_etternavn"> Etternavn: </label>
-                <input class="form-control" type="text" id="inp_etternavn" onchange="leggTilEtternavn(this.value)">
-                <span class="text-danger" id="feilmelding-etternavn"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="inp_telefonnr"> Telefonnr: </label>
-                <input class="form-control" type="text" id="inp_telefonnr" onchange="leggTilTelefonnr(this.value)">
-                <span class="text-danger" id="feilmelding-telefonnr"></span>
-            </div>
-
-            <div class="form-group">
-                <label for="inp_epost"> E-post: </label>
-                <input class="form-control" type="text" id="inp_epost" onchange="leggTilEpost(this.value)">
-                <span class="text-danger" id="feilmelding-epost"></span>
-            </div>
-
+        <div class="col">
+          <!-- VELG ANTALL BILLETTER -->
+            <label for="billettInput">Antall: </label>
+            <select class="form-select" id="billettInput" onchange="leggTilBillett(this.value)">
+              <option value="">Velg antall her</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+              <option>6</option>
+              <option>7</option>
+              <option>8</option>
+              <option>9</option>
+            </select>
+          <span class="text-danger" id="billett-feilmelding"></span>
         </div>
-
-        <!-- Kjøpeknappen for kjøp av kinobilletter -->
-
-        <div>
-            <button class="btn btn-primary my-3" type="button" id="kjopKnapp" onclick="kjopBillett()"> Kjop billett </button>
-        </div>
+      </div>
     </form>
-
-    <!-- Vis billetter som ble gjennomført etter kjøpknappen -->
+    <br>
+    <!-- PERSONINFORMASJON -->
     <div class="row">
-        <h2 class="my-3"> Alle billetter </h2>
-        <div id="VisBilletter"></div>
-
-        <!-- Sletteknappen for å slette alle billetter som ble bestilt -->
-        <div>
-            <button class="btn btn-danger my-3" type="button" id="slettKnapp" onclick="slettBilletter()"> Slett alle billettene </button>
+      <form>
+        <div class="form-group">
+          <label for="fornavnInput">Fornavn</label>
+          <input class="form-control" type="text" id="fornavnInput" onchange="leggTilFornavn(this.value)">
+          <span class="text-danger" id="fornavn-feilmelding"></span>
         </div>
+        <div class="form-group">
+          <label for="etternavnInput">Etternavn</label>
+          <input class="form-control" type="text" id="etternavnInput" onchange="leggTilEtternavn(this.value)">
+          <span class="text-danger" id="etternavn-feilmelding"></span>
+        </div>
+        <div class="form-group">
+          <label for="telefonnrInput">Telefonnr</label>
+          <input class="form-control" type="text" id="telefonnrInput" onchange="leggTilTelefonnr(this.value)">
+          <span class="text-danger" id="telefonnr-feilmelding"></span>
+        </div>
+        <div class="form-group">
+          <label for="epostInput">Epost</label>
+          <input class="form-control" type="text" id="epostInput" onchange="leggTilEpost(this.value)">
+          <span class="text-danger" id="epost-feilmelding"></span>
+        </div>
+        <!-- Kjøp knapp -->
+        <div>
+          <button class="btn btn-primary my-3" type="button" id="kjøpKnapp" onclick="kjopBillett()">Kjøp billett</button>
+          <button class="btn btn-danger my-3" type="button" id="slettKnapp" onclick="slettBilletter()">Slett alle billettene</button>
+        </div>
+      </form>
     </div>
-</div>
+
+    <!-- NY BILLETTOVERSIKT -->
+
+    <div id="billettVisning"></div>
+
+  </div>
 
 </body>
+
 </html>
